--- a/app/views/words/new.html.erb
+++ b/app/views/words/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New word</h1>
+<h1 class="page-title">New word</h1>
+
+<div class="actions">
+  <%= link_to "Words", words_path, class: "button-purple back-button" %>
+</div>
+
+<br/>
 
 <%= render "form", word: @word %>
-
-<br>
-
-<div>
-  <%= link_to "Back to words", words_path %>
-</div>
