--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -1,10 +1,7 @@
-<p id="notice"><%= notice %></p>
+<h1 class="page-title" lang="jp"><%= @word.japanese %></h1>
 
-<%= render @word %>
+<%= link_to "Back to words", words_path %>
 
-<div>
-  <%= link_to "Edit this word", edit_word_path(@word) %> |
-  <%= link_to "Back to words", words_path %>
-
-  <%= button_to "Destroy this word", word_path(@word), method: :delete %>
-</div>
+<%= turbo_frame_tag dom_id(@word) do %>
+  <%= render(@word) %>
+<% end %>
