--- a/app/assets/stylesheets/word_list/words.scss
+++ b/app/assets/stylesheets/word_list/words.scss
@@ -1,8 +1,18 @@
+.page-title {
+  margin: 12px 0px;
+}
+
 .word-form {
+  margin: 12px 0px;
+  padding: 6px 12px 12px 12px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: 1px solid #F3F4F6;
+  border-radius: 4px;
   .form-field {
     label {
       display: block;
-      padding: 4px 0px;
+      padding: 6px 1px;
+      font-weight: 500;
     }
     input {
       font-size: 1em;
@@ -17,68 +27,55 @@
   .form-actions {
     padding-top: 14px;
   }
-  .submit {
-    padding: 8px 16px;
-    border-radius: 0.6em;
-    border-style: solid;
-    background-color: #3498db;
-    border-color: #3498db;
-    color: #fff;
-    font-size: 1em;
-    &:hover {
-      cursor: pointer;
-    }
-  }
 }
 
-.words-table {
-  padding-top: 20px;
+.words {
+  padding-top: 12px;
+}
 
-  .table-scroll-container {
-    overflow-x: scroll;
-    padding-bottom: 16px;
+.new-word {
+  position: absolute;
+  top: 28px;
+  right: 20px;
+}
 
-    .table {
-      border-left: 1px solid #bbb;
-      border-bottom: 1px solid #bbb;
-      border-radius: 4px;
+.back-button {
+  position: absolute;
+  top: 28px;
+  right: 20px;
+}
 
-      .table-row {
-        display: flex;
-
-        .table-header-cell { font-weight: bold; }
-        // .table-header-cell[role="columnheader"] { /* styles for the table header cells */ }
-        // .table-header-cell[role="rowheader"] { /* styles for the first cell in each row */ }
-        .table-header-cell,
-        .table-data-cell {
-          border-top: 1px solid #bbb;
-          border-right: 1px solid #bbb;
-          padding: 8px 12px;
-          flex: 1;
-
-          // === column-specific widths ===
-          &:not(:last-child) { min-width: 100px; } // all columns except the last
-          &:nth-last-child(2) { max-width: 100px; } // word added column
-          &:last-child { // edit column
-            min-width: 35px;
-            max-width: 35px;
-          }
-        }
-      }
-
-      // === Table rounded edges pt. 2 ===
-      .table-header-cell {
-        /* top-left border-radius */
-        &:first-child { border-top-left-radius: 4px; }
-        /* top-right border-radius */
-        &:last-child { border-top-right-radius: 4px; }
-      }
-      turbo-frame:last-child .table-row {
-        /* bottom-right border-radius */
-        .table-data-cell:last-child { border-bottom-right-radius: 4px; }
-        /* bottom-left border-radius */
-        .table-data-cell:first-child { border-bottom-left-radius: 4px; }
-      }
+.word {
+  margin: 12px 0px;
+  padding: 12px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  border: 1px solid #F3F4F6;
+  border-radius: 4px;
+  position: relative;
+  .japanese {
+    font-weight: 600;
+  }
+  .source-name,
+  .added-on {
+    color: #9CA3AF;
+  }
+  .edit a {
+    text-decoration: none;
+    position: absolute;
+    top: 4px;
+    right: 34px;
+    font-size: 1.15em;
+  }
+  .delete button {
+    background: none;
+    border: none;
+    text-decoration: none;
+    position: absolute;
+    top: 4px;
+    right: 2px;
+    font-size: 1.15em;
+    &:hover {
+      cursor: pointer;
     }
   }
 }
