--- a/app/views/words/_form.html.erb
+++ b/app/views/words/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_with(model: word) do |form| %>
     <div class="form-field">
       <%= form.label :english %>
-      <%= form.text_field :english, autocomplete: "off", data: { lpignore: true } %>
+      <%= form.text_field :english, autocomplete: "off", data: { lpignore: true }, autofocus: true %>
     </div>
     <div class="form-field">
       <%= form.label :japanese %>
@@ -14,7 +14,7 @@
     </div>
 
     <div class="form-actions">
-      <%= form.submit class: "submit" %>
+      <%= form.submit class: "button-blue submit" %>
     </div>
   <% end %>
 </div>
