--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -1,12 +1,12 @@
-<h1>Editing word</h1>
+<h1 class="page-title">Editing word</h1>
+
+<div class="actions">
+  <%= link_to "Show this word", @word %> |
+  <%= link_to "Back to words", words_path %>
+</div>
+
+<br/>
 
 <%= turbo_frame_tag dom_id(@word) do %>
   <%= render "form", word: @word %>
 <% end %>
-
-<br>
-
-<div>
-  <%= link_to "Show this word", @word %> |
-  <%= link_to "Back to words", words_path %>
-</div>
