--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -7,6 +7,6 @@
     <div class="source-name"><%= word.source_name %></div>
     <div class="added-on"><%= word.created_at.strftime("%m/%d/%Y") %></div>
     <div class="edit"><%= link_to("✏️", edit_word_path(word)) %></div>
-    <div class="delete"><%= button_to("🗑️", word_path(word), method: :delete) %></div>
+    <div class="delete"><%= button_to("🗑️", word_path(word), method: :delete, data: { turbo: "false" }) %></div>
   </div>
 <% end %>
