--- a/app/assets/stylesheets/word_list/words.scss
+++ b/app/assets/stylesheets/word_list/words.scss
@@ -47,7 +47,7 @@
 
 .word {
   margin: 12px 0px;
-  padding: 12px;
+  padding: 12px 12px 8px 12px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border: 1px solid #F3F4F6;
   border-radius: 4px;
@@ -59,6 +59,10 @@
   .source-reference,
   .added-on {
     color: #9CA3AF;
+  }
+  .resources {
+    padding-top: 5px;
+    a { text-decoration: none; }
   }
   .cards-created button {
     background: none;
