--- a/app/assets/stylesheets/word_list/component_styles.scss
+++ b/app/assets/stylesheets/word_list/component_styles.scss
@@ -45,8 +45,8 @@
   padding: 8px 16px;
   border-radius: 0.6em;
   border-style: solid;
-  background-color: #3498db;
-  border-color: #3498db;
+  background-color: #3B82F6;
+  border-color: #3B82F6;
   color: #fff;
   font-size: 1em;
   &:hover {
