--- a/app/views/words/edit.html.erb
+++ b/app/views/words/edit.html.erb
@@ -1,8 +1,7 @@
 <h1 class="page-title">Editing word</h1>
 
 <div class="actions">
-  <%= link_to "Show this word", @word %> |
-  <%= link_to "Back to words", words_path %>
+  <%= link_to "Words", words_path, class: "button-purple back-button" %>
 </div>
 
 <br/>
