--- a/app/assets/stylesheets/word_list/words.scss
+++ b/app/assets/stylesheets/word_list/words.scss
@@ -11,17 +11,19 @@
   .form-field {
     label {
       display: block;
-      padding: 6px 1px;
+      padding: 8px 0px 5px 0px;
       font-weight: 500;
     }
     input {
-      font-size: 1em;
+      font-size: 1.1em;
       border-radius: 4px;
       border: 1px solid #bbb;
       padding: 12px;
       width: 200px;
       height: 12px;
-
+      &:focus {
+        outline-color: #3B82F6;
+      }
     }
   }
   .form-actions {
@@ -47,21 +49,25 @@
 
 .word {
   margin: 12px 0px;
-  padding: 12px 12px 8px 12px;
+  padding: 8px 12px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border: 1px solid #F3F4F6;
   border-radius: 4px;
   position: relative;
-  .japanese {
-    font-weight: 600;
+  .translation {
+    padding-bottom: 4px;
+    .japanese {
+      font-size: 1.4em;
+    }
+    .english {
+      padding-left: 4px;
+    }
   }
-  .source-name,
-  .source-reference,
-  .added-on {
+  .source {
     color: #9CA3AF;
+    padding-bottom: 7px;
   }
   .resources {
-    padding-top: 5px;
     a { text-decoration: none; }
   }
   .cards-created button {
