--- a/app/views/words/show.html.erb
+++ b/app/views/words/show.html.erb
@@ -1,6 +1,10 @@
 <h1 class="page-title" lang="jp"><%= @word.japanese %></h1>
 
-<%= link_to "Back to words", words_path %>
+<div class="actions">
+  <%= link_to "Words", words_path, class: "button-purple back-button" %>
+</div>
+
+<br/>
 
 <%= turbo_frame_tag dom_id(@word) do %>
   <%= render(@word) %>
