--- a/app/assets/stylesheets/word_list/words.scss
+++ b/app/assets/stylesheets/word_list/words.scss
@@ -102,3 +102,63 @@
     }
   }
 }
+
+.import-csv-form {
+  font-size: 1.1em;
+  .mapping-field-row {
+    margin-bottom: 4px;
+    input {
+      width: 25px;
+      font-size: 1.1em;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      padding: 12px;
+      height: 12px;
+      &:focus {
+        outline-color: #3B82F6;
+      }
+    }
+  }
+  .last-created-card-row-field-row,
+  .source-name-field-row {
+    padding: 8px 0px;
+    input {
+      display: block;
+      font-size: 1.1em;
+      border-radius: 4px;
+      border: 1px solid #bbb;
+      padding: 12px;
+      width: 200px;
+      height: 12px;
+      &:focus {
+        outline-color: #3B82F6;
+      }
+    }
+    label {
+      display: block;
+      padding: 8px 0px 5px 0px;
+      font-weight: 500;
+    }
+  }
+  input[type="file"] {
+    font-size: 1.1em;
+    margin: 6px 0px 0px 1px;
+    display: block;
+    margin-top: 20px;
+  }
+  input[type="submit"] {
+    margin-top: 24px;
+    display: block;
+  }
+  // ::-webkit-file-upload-button {
+  //   // to style the file upload button
+  //   display: none;
+  // }
+  .includes-headers-field-row {
+    padding-top: 18px;
+    input[type="checkbox"] {
+      font-size: 1.1em;
+      transform: scale(1.4);
+    }
+  }
+}
