--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -1,16 +1,30 @@
 <%= turbo_frame_tag dom_id(word) do %>
   <div class="word">
+    <div class="delete">
+      <%= button_to("🗑️", word_path(word), method: :delete, data: { controller: "confirmation", confirmation_message_value: "Are you sure you want to delete '#{word.japanese}'? This action is permanent and cannot be undone.", action: "confirmation#confirm" } ) %>
+    </div>
+    <div class="edit"><%= link_to("✏️", edit_word_path(word)) %></div>
+    <div class="cards-created">
+      <%= button_to(word_toggle_card_created_path(word), method: :post) do %>
+        <% if word.cards_created? %>
+          <span title="Cards created">✅</span>
+        <% else %>
+          <span title="No cards created yet">🆕</span>
+        <% end %>
+      <% end %>
+    </div>
+
     <div class="translation">
       <span class="japanese" lang="jp"><%= word.japanese %></span>
       <span class="english">(<%= word.english %>)</span>
     </div>
+
     <div class="source">
-      Added
-      <span class="added-on"><%= word.created_at.strftime("%m/%d/%Y") %></span>
-      >
-      <span class="source-name"><%= word.source_name %></span>
+      <span class="added-on">Added&nbsp;<%= word.created_at.strftime("%m/%d/%Y") %></span>
+      <span class="source-name">&gt;&nbsp;<%= word.source_name %></span>
       <span class="source-reference"><%= word.source_reference %></span>
     </div>
+
     <div class="resources">
       <%# The https://github.com/jhunschejones/Chrome-According-To-Josh/tree/main/save-audio-japanesepod101 chrome extension is required for this search to work %>
       <%= link_to("https://www.japanesepod101.com/japanese-dictionary/?search=#{word.japanese}", target: "_blank", title: "Jpod101 dictionary search") do %>
@@ -31,19 +45,6 @@
       <%= link_to("https://www.japanesepod101.com/japanese-word-lists/?search=#{word.japanese}&coreX=2000", target: "_blank", title: "Jpod101 sentence search") do %>
         <img src="https://d1pra95f92lrn3.cloudfront.net/media/thumb/23728_256square.jpg" height="20px">
       <% end %>
-    </div>
-    <div class="cards-created">
-      <%= button_to(word_toggle_card_created_path(word), method: :post) do %>
-        <% if word.cards_created? %>
-          <span title="Cards created">✅</span>
-        <% else %>
-          <span title="No cards created yet">🆕</span>
-        <% end %>
-      <% end %>
-    </div>
-    <div class="edit"><%= link_to("✏️", edit_word_path(word)) %></div>
-    <div class="delete">
-      <%= button_to("🗑️", word_path(word), method: :delete, data: { controller: "confirmation", confirmation_message_value: "Are you sure you want to delete '#{word.japanese}'? This action is permanent and cannot be undone.", action: "confirmation#confirm" } ) %>
     </div>
   </div>
 <% end %>
