--- a/app/assets/stylesheets/word_list/words.scss
+++ b/app/assets/stylesheets/word_list/words.scss
@@ -35,15 +35,10 @@
   padding-top: 12px;
 }
 
-.new-word {
-  position: absolute;
-  top: 28px;
-  right: 20px;
-}
-
+.new-word,
 .back-button {
   position: absolute;
-  top: 28px;
+  top: 75px;
   right: 20px;
 }
 
