--- a/app/assets/stylesheets/word_list/index.scss
+++ b/app/assets/stylesheets/word_list/index.scss
@@ -4,54 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 @import "variables";
+@import "shared";
 @import "words";
+@import "users";
+@import "sessions";
 @import "component_styles";
-
-html {
-  font-family: 'Roboto', Arial, Helvetica, sans-serif;
-  font-size: 1.05em;
-  color: #1F2937;
-  body { margin: 0px; }
-}
-
-nav {
-  position: relative;
-  overflow: hidden;
-  background-color: #374151;
-  height: 50px;
-  box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1),0 10px 10px -5px rgba(0,0,0,0.04);
-  a {
-    float: left;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 1em;
-    &:hover {
-      background-color: #1F2937;
-    }
-  }
-  .center-links {
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  .right-links {
-    float: right;
-  }
-  @media (max-width: 600px) {
-    /* collapse links for mobile? */
-  }
-}
-
-main {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  .page-content {
-    padding: 12px;
-    width: 700px;
-  }
-}
