--- a/app/assets/stylesheets/word_list/shared.scss
+++ b/app/assets/stylesheets/word_list/shared.scss
@@ -53,6 +53,7 @@ main {
   color: white;
   border-radius: 4px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  margin-bottom: 25px;
   .notice {
     padding: 16px 20px;
     margin: 0px;
@@ -64,7 +65,7 @@ main {
     background-color: #F59E0B;
   }
   &.success {
-    background-color: #10B981;
+    background-color: #34D399;
   }
   .close-flash-button {
     float: right;
