--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -42,7 +42,7 @@
       <%= link_to("https://tatoeba.org/en/sentences/search?from=jpn&has_audio=yes&native=&orphans=no&query=#{word.japanese}&sort=relevance&sort_reverse=&tags=&to=&trans_filter=limit&trans_has_audio=&trans_link=&trans_orphan=&trans_to=&trans_unapproved=&trans_user=&unapproved=no&user=", target: "_blank", title: "Tatoeba sentence search") do %>
         <img src="https://tatoeba.org/img/tatoeba.svg?1634498597" height="20px">
       <% end %>
-      <%= link_to("https://www.japanesepod101.com/japanese-word-lists/?search=#{word.japanese}&coreX=2000", target: "_blank", title: "Jpod101 sentence search") do %>
+      <%= link_to("https://www.japanesepod101.com/jpstudys/?search=#{word.japanese}&coreX=2000", target: "_blank", title: "Jpod101 sentence search") do %>
         <img src="https://d1pra95f92lrn3.cloudfront.net/media/thumb/23728_256square.jpg" height="20px">
       <% end %>
     </div>
