--- a/app/views/user_mailer/confirm_subscription_email.html.erb
+++ b/app/views/user_mailer/confirm_subscription_email.html.erb
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html style="font-family:'Roboto',Arial,Helvetica,sans-serif;font-size:1.2em;color:#1F2937;">
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Thank you for subscribing to JP Study</h1>
-    <p>
-      To connect your account to your subscription, please login to the site
-      with this link: <%= @url %>.
-    </p>
-    <p>Thanks for joining and best of luck with your studies!</p>
+    <table align='center' class="email-container">
+      <td>
+        <table align='center' class="logo-container">
+          <td>
+            <h2>JP Study</h2>
+            <%# image_tag("logo.jpg", height: "28", alt: "JP Study logo") %>
+          </td>
+        </table>
+        <p style="max-width:700px;padding-bottom:20px;">
+          Hi there! Thank you for subscribing to JP Study. To connect your shiny
+          new subscription to your account, please log in using this link:
+        </p>
+        <p>
+          <table align='center' class="button-container" style="padding-bottom:20px;">
+            <td>
+              <a
+                style="
+                  text-decoration: none;
+                  padding: 8px 16px;
+                  border-radius: 0.6em;
+                  border-style: solid;
+                  background-color: #3B82F6;
+                  border-color: #3B82F6;
+                  color: #fff;
+                  font-size: 1em;
+                  cursor: pointer;
+                "
+                href="<%= @url %>"
+              >Log in</a>
+            </td>
+          </table>
+        </p>
+        <p style="max-width:700px;">
+          Thank you for helping make JP Study a success! We wish you the best
+          of luck with your studies. 頑張って!
+        </p>
+        <p>- The JP Study team</p>
+      </td>
+    </table>
   </body>
 </html>
