Clean up commas

--- a/app/views/user_mailer/confirm_subscription_email.html.erb
+++ b/app/views/user_mailer/confirm_subscription_email.html.erb
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html style="font-family:'Roboto',Arial,Helvetica,sans-serif;font-size:1.2em;color:#1F2937;">
+<html style="font-family:'Roboto',Arial,Helvetica,sans-serif;font-size:1.1em;color:#1F2937;">
   <head>
-    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <table align='center' class="email-container">
+    <table align="center" class="email-container">
       <td>
-        <table align='center' class="logo-container">
+        <table align="center" class="logo-container">
           <td>
             <h2>JP Study</h2>
             <%# image_tag("logo.jpg", height: "28", alt: "JP Study logo") %>
@@ -17,20 +17,10 @@
           new subscription to your account, please log in using this link:
         </p>
         <p>
-          <table align='center' class="button-container" style="padding-bottom:20px;">
+          <table align="center" class="button-container" style="padding-bottom:20px;">
             <td>
               <a
-                style="
-                  text-decoration: none;
-                  padding: 8px 16px;
-                  border-radius: 0.6em;
-                  border-style: solid;
-                  background-color: #3B82F6;
-                  border-color: #3B82F6;
-                  color: #fff;
-                  font-size: 1em;
-                  cursor: pointer;
-                "
+                style="text-decoration:none;padding:8px 16px;border-radius:0.6em;border-style:solid;background-color:#3B82F6;border-color:#3B82F6;color:#fff;font-size:1em;cursor:pointer;"
                 href="<%= @url %>"
               >Log in</a>
             </td>
