Update app name in mailers

--- a/app/views/user_mailer/confirm_subscription_email.html.erb
+++ b/app/views/user_mailer/confirm_subscription_email.html.erb
@@ -8,12 +8,12 @@
       <td>
         <table align="center" class="logo-container">
           <td>
-            <h2>JP Study</h2>
-            <%# image_tag("logo.jpg", height: "28", alt: "JP Study logo") %>
+            <h2>jpstudy</h2>
+            <%# image_tag("logo.jpg", height: "28", alt: "jpstudy logo") %>
           </td>
         </table>
         <p style="max-width:700px;padding-bottom:20px;">
-          Hi there! Thank you for subscribing to JP Study. To connect your shiny
+          Hi there! Thank you for subscribing to jpstudy. To connect your shiny
           new subscription to your account, please log in using this link:
         </p>
         <p>
@@ -27,10 +27,10 @@
           </table>
         </p>
         <p style="max-width:700px;">
-          Thank you for helping make JP Study a success! We wish you the best
+          Thank you for helping make jpstudy a success! We wish you the best
           of luck with your studies. 頑張って!
         </p>
-        <p>- The JP Study team</p>
+        <p>- The jpstudy team</p>
       </td>
     </table>
   </body>
