--- a/app/views/user_mailer/confirm_subscription_email.text.erb
+++ b/app/views/user_mailer/confirm_subscription_email.text.erb
@@ -1,7 +1,12 @@
-Thank you for subscribing to JP Study
+jpstudy
 =====================================
 
-To connect your account to your subscription, please login to the site
-with this link: <%= @url %>.
+Hi there! Thank you for subscribing to jpstudy. To connect your shiny
+new subscription to your account, please log in using this link:
 
-Thanks for joining and best of luck with your studies!
+<%= @url %>
+
+Thank you for helping make jpstudy a success! We wish you the best
+of luck with your studies. 頑張って!
+
+- The jpstudy team
