Adding verification and reset flows WIP

--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -1,20 +1,20 @@
 <p style="max-width:700px;padding-bottom:20px;">
-  Hi there! Thank you for subscribing to jpstudy. To connect your shiny
-  new subscription to your account, please log in using this link:
+  Having trouble accessing your account? We recieved a password reset request
+  for your account on jpstudy.app. If this request came from you, you can follow
+  this link to reset your password:
 </p>
 <p>
   <table align="center" class="button-container" style="padding-bottom:20px;">
     <td>
       <a
         style="text-decoration:none;padding:8px 16px;border-radius:0.6em;border-style:solid;background-color:#3B82F6;border-color:#3B82F6;color:#fff;font-size:1em;cursor:pointer;"
-        href="<%= @url %>"
+        href="<%= password_reset_url(token: @token) %>"
       >
-        Log in
+        Reset
       </a>
     </td>
   </table>
 </p>
 <p style="max-width:700px;">
-  Thank you for helping make jpstudy a success! We wish you the best
-  of luck with your studies. 頑張って!
+  See you inside!
 </p>
