--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html style="font-family:'Roboto',Arial,Helvetica,sans-serif;font-size:1.1em;color:#1F2937;">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>
-      /* Email styles need to be inline */
-    </style>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
-
   <body>
-    <%= yield %>
+    <table align="center" class="email-container">
+      <td>
+        <table align="center" class="logo-container">
+          <td>
+            <h2>jpstudy</h2>
+            <%# image_tag("logo.jpg", height: "28", alt: "jpstudy logo") %>
+          </td>
+        </table>
+        <% yield %>
+        <p>- The jpstudy team</p>
+      </td>
+    </table>
   </body>
 </html>
