Get user password reset flow working

--- a/app/assets/stylesheets/jpstudy/passwords.scss
+++ b/app/assets/stylesheets/jpstudy/passwords.scss
@@ -1,8 +1,10 @@
-.login-form-container {
+.password-reset-form-container,
+.password-forgot-form-container {
   display: flex;
   width: 100%;
   justify-content: center;
-  .login-form {
+  .password-reset-form,
+  .password-forgot-form {
     max-width: 400px;
     width: 100%;
     label {
@@ -10,6 +12,7 @@
       padding: 8px 0px 5px 0px;
       font-weight: 500;
     }
+    input[type="text"],
     input[type="email"],
     input[type="password"] {
       display: block;
@@ -26,15 +29,6 @@
     }
     input[type="submit"] {
       margin-top: 12px;
-    }
-    .more-actions {
-      padding-top: 12px;
-      a {
-        color: #3B82F6;
-        display: block;
-        font-size: 1em;
-        padding: 0px;
-      }
     }
   }
 }
