--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -12,7 +12,7 @@
             <%# image_tag("logo.jpg", height: "28", alt: "jpstudy logo") %>
           </td>
         </table>
-        <% yield %>
+        <%= yield %>
         <p>- The jpstudy team</p>
       </td>
     </table>
