--- a/app/views/user_mailer/password_reset_email.txt.erb
+++ b/app/views/user_mailer/password_reset_email.txt.erb
@@ -2,6 +2,6 @@ Having trouble accessing your account? We recieved a password reset request
 for your account on jpstudy.app. If this request came from you, you can follow
 this link to reset your password:
 
-<%= password_reset_url(token: @token) %>
+<%= password_reset_url(token: @token.to_s, user_id: @user.id) %>
 
 See you inside!
