--- a/app/views/user_mailer/password_reset_email.html.erb
+++ b/app/views/user_mailer/password_reset_email.html.erb
@@ -8,9 +8,9 @@
     <td>
       <a
         style="text-decoration:none;padding:8px 16px;border-radius:0.6em;border-style:solid;background-color:#3B82F6;border-color:#3B82F6;color:#fff;font-size:1em;cursor:pointer;"
-        href="<%= password_reset_url(token: @token) %>"
+        href="<%= password_reset_url(token: @token.to_s, user_id: @user.id) %>"
       >
-        Reset
+        Reset password
       </a>
     </td>
   </table>
